--- a/resources.qmd
+++ b/resources.qmd
@@ -16,14 +16,14 @@ Here you'll find resources to help you learn structures of the human body.
 
 ### Interactive 3D Anatomy Model {.no-underline}
 
-Explore the human body in 3D with Zygote Body — an interactive tool that lets you zoom, rotate, and isolate individual structures.
-
 <details>
-  <summary style="color: #4FA78D; cursor: pointer;"><strong>Click to expand</strong></summary>
+  <summary style="color: white; cursor: pointer;"><strong>Click to expand</strong></summary>
 
 <div class="clickable-links">
 
-[Visit Zygote Body](https://www.zygotebody.com/)
+Explore the human body in 3D with Zygote Body — an interactive tool that lets you zoom, rotate, and isolate individual structures.
+
+[Visit Zygote Body](https://www.zygotebody.com/){target="_blank"}
 
 </div>
 
@@ -31,44 +31,40 @@ Explore the human body in 3D with Zygote Body — an interactive tool that lets 
 
 </details>
 
----
 
 ### Quizlet Flashcards {.no-underline}
 
-Created for Dr. Len Miyahara's BIO 124 course at Allan Hancock College in 2021. Material may differ. 
 
 <details>
-  <summary style="color: #4FA78D; cursor: pointer;"><strong>Click to expand</strong></summary>
-
+  <summary style="color: white; cursor: pointer;"><strong>Click to expand</strong></summary>
+  
+Created for Dr. Len Miyahara's BIO 124 course at Allan Hancock College in 2021. Material may differ. 
    
    
 
 <div class="clickable-links">
 
-[Histology & Integumentary Systems](https://quizlet.com/user/Th3b3ckst3r/folders/histology-and-integumentary-system?i=2236oh&x=1xqt)
+[Histology & Integumentary Systems](https://quizlet.com/user/Th3b3ckst3r/folders/histology-and-integumentary-system?i=2236oh&x=1xqt){target="_blank"}
 
-[Skeletal System](https://quizlet.com/user/Th3b3ckst3r/folders/skeletal-system?i=2236oh&x=1xqt)
+[Skeletal System](https://quizlet.com/user/Th3b3ckst3r/folders/skeletal-system?i=2236oh&x=1xqt){target="_blank"}
 
-[Muscular System](https://quizlet.com/user/Th3b3ckst3r/folders/muscles?i=2236oh&x=1xqt)
+[Muscular System](https://quizlet.com/user/Th3b3ckst3r/folders/muscles?i=2236oh&x=1xqt){target="_blank"}
 
-[Heart, Circulatory, & Respiratory Systems](https://quizlet.com/user/Th3b3ckst3r/folders/heart-circulatory-respiratory-systems?i=2236oh&x=1xqt)
+[Heart, Circulatory, & Respiratory Systems](https://quizlet.com/user/Th3b3ckst3r/folders/heart-circulatory-respiratory-systems?i=2236oh&x=1xqt){target="_blank"}
 
-[Digestive, Urinary, & Reproductive Systems](https://quizlet.com/user/Th3b3ckst3r/folders/digestive-urinary-reproductive-systems?i=2236oh&x=1xqt)
+[Digestive, Urinary, & Reproductive Systems](https://quizlet.com/user/Th3b3ckst3r/folders/digestive-urinary-reproductive-systems?i=2236oh&x=1xqt){target="_blank"}
 
-[Brain, Special Senses, & Nervous System](https://quizlet.com/user/Th3b3ckst3r/folders/nervous-system-brain-special-senses?i=2236oh&x=1xqt)
+[Brain, Special Senses, & Nervous System](https://quizlet.com/user/Th3b3ckst3r/folders/nervous-system-brain-special-senses?i=2236oh&x=1xqt){target="_blank"}
 
 </div>
 
 </details>
 
-----
 
 ### Visual Guides {.no-underline}
 
-*Under construction*
-
 <details>
-  <summary style="color: #4FA78D; cursor: pointer;"><strong>Click to expand</strong></summary>
+  <summary style="color: white; cursor: pointer;"><strong>Click to expand</strong></summary>
   
 <div class="clickable-links">
 
@@ -82,18 +78,18 @@ Created for Dr. Len Miyahara's BIO 124 course at Allan Hancock College in 2021. 
 
 ## **Chemistry**
 
-Here are resources to help you learn basic chemistry.
+Here are resources to help learn basic chemistry.
 
 ### PhET Chemistry Simulations {.no-underline}
 
-Explore interactive chemistry simulations that help with understanding through visualizing.
-
 <details>
-  <summary style="color: #4FA78D; cursor: pointer;"><strong>Click to expand</strong></summary>
+  <summary style="color: white; cursor: pointer;"><strong>Click to expand</strong></summary>
 
 <div class="clickable-links">
 
-[More PhET Simulations](https://phet.colorado.edu/en/simulations/filter?type=html)
+Explore interactive chemistry simulations that help with understanding through visualizing.
+
+[More PhET Simulations](https://phet.colorado.edu/en/simulations/filter?type=html){target="_blank"}
 
 </div>
 
@@ -109,17 +105,16 @@ Explore interactive chemistry simulations that help with understanding through v
 
 Explore a collection of helpful math tools and materials. 
 
-
 ### Calculators {.no-underline}
+
+<details>
+  <summary style="color: white; cursor: pointer;"><strong>Click to expand</strong></summary>
 
 Below you will find a collection of free online calculators from desmos.
 
-<details>
-  <summary style="color: #4FA78D; cursor: pointer;"><strong>Click to expand</strong></summary>
-
 <div class="clickable-links">
 
-[Desmos Website](https://www.desmos.com/)
+[Desmos Website](https://www.desmos.com/){target="_blank"}
 
 </div>
 
@@ -134,14 +129,13 @@ Below you will find a collection of free online calculators from desmos.
 
 </details>
 
----
 
 ### Videos {.no-underline}
 
-These videos by Professor Leonard have been very helpful for learning math. If you find them useful, consider supporting him on [Patreon](https://patreon.com/ProfessorLeonard){target="_blank"}.
-
 <details>
-  <summary style="color: #4FA78D; cursor: pointer;"><strong>Click to expand</strong></summary>
+  <summary style="color: white; cursor: pointer;"><strong>Click to expand</strong></summary>
+  
+These videos by Professor Leonard have been very helpful for learning math. If you find them useful, consider supporting him on [Patreon](https://patreon.com/ProfessorLeonard){target="_blank"}.
 
 Prealgebra 
 
